@@ -1,5 +1,7 @@
 --------------------------
 Changes in 1.8.6
+- Fix CB3DMeshFileLoader::readString. Prevent adding a character beyond file-end. Thanks @sfan5 for report and patch.
+  Original patch (commit 103ab16 to Minetest): https://github.com/minetest/irrlicht/commit/103ab16679a42cb1bfa4cc4e6316195ec2d139b6
 - CB3DMeshFileLoader: add some bounds checks. Thanks @sfan5 for report and patch.
   Original patch (commit 64688f4 to Minetest): https://github.com/minetest/irrlicht/commit/64688f449099246ec27eb013f58d72a0abb1c6e6
 - TGA loader: Fix number overflow causing crashes. Thanks @sfan5 for fuzzing test.
